--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "ioredis": "^5.4.1",
     "ms": "^2.1.3",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
